--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     tags:
-      - 'v*'
+      - v*
   pull_request:
     branches:
       - master
@@ -42,6 +42,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
+        pip install ruff
 
     - name: Lint with ruff
       run: |
@@ -160,14 +161,14 @@ jobs:
       if: github.event_name != 'pull_request'
       uses: aquasecurity/trivy-action@master
       with:
-        image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-        format: 'sarif'
+        format: sarif
+        output: trivy-results.sarif
         output: 'trivy-results.sarif'
 
     - name: Upload Trivy scan results to GitHub Security tab
       if: github.event_name != 'pull_request'
       uses: github/codeql-action/upload-sarif@v2
-      with:
+        sarif_file: trivy-results.sarif
         sarif_file: 'trivy-results.sarif'
 
   deploy-docs:
@@ -202,7 +203,7 @@ jobs:
 
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v2
-      with:
+        path: ./site
         path: './site'
 
     - name: Deploy to GitHub Pages
