--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,12 +3,15 @@ name: Build and Publish Docker Image
 on:
   push:
     branches:
-      - master
+      - main
+      - develop
     tags:
-      - v*
+      - 'v*'
   pull_request:
     branches:
-      - master
+      - main
+      - develop
+
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
@@ -42,12 +45,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
-        pip install ruff
 
     - name: Lint with ruff
       run: |
         # Check for syntax errors and undefined names
-        ruff check . --select=E9,F63,F7,F82 --show-files
+        ruff check . --select=E9,F63,F7,F82 --show-source
         # Check all other linting rules
         ruff check .
 
@@ -161,19 +163,20 @@ jobs:
       if: github.event_name != 'pull_request'
       uses: aquasecurity/trivy-action@master
       with:
-        format: sarif
-        output: trivy-results.sarif
+        image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+        format: 'sarif'
+        output: 'trivy-results.sarif'
 
     - name: Upload Trivy scan results to GitHub Security tab
       if: github.event_name != 'pull_request'
       uses: github/codeql-action/upload-sarif@v2
       with:
-        sarif_file: trivy-results.sarif
+        sarif_file: 'trivy-results.sarif'
 
   deploy-docs:
     runs-on: ubuntu-latest
     needs: [build]
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     permissions:
       contents: read
       pages: write
@@ -203,7 +206,7 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v2
       with:
-        path: ./site
+        path: './site'
 
     - name: Deploy to GitHub Pages
       id: deployment
