--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,13 +3,13 @@ name: Build and Publish Docker Image
 on:
   push:
     branches:
-      - main
+      - master
       - develop
     tags:
-      - 'v*'
+      - v*
   pull_request:
     branches:
-      - main
+      - master
       - develop
 
 env:
