--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -45,6 +45,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
+        pip install ruff
 
     - name: Lint with ruff
       run: |
@@ -106,6 +107,8 @@ jobs:
     permissions:
       contents: read
       packages: write
+      attestations: write
+      id-token: write
 
     steps:
     - name: Checkout code
@@ -164,19 +167,18 @@ jobs:
       uses: aquasecurity/trivy-action@master
       with:
         image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-        format: 'sarif'
-        output: 'trivy-results.sarif'
+        format: sarif
+        output: trivy-results.sarif
 
     - name: Upload Trivy scan results to GitHub Security tab
-      if: github.event_name != 'pull_request'
       uses: github/codeql-action/upload-sarif@v2
       with:
-        sarif_file: 'trivy-results.sarif'
+        sarif_file: trivy-results.sarif
 
   deploy-docs:
     runs-on: ubuntu-latest
     needs: [build]
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/master'
     permissions:
       contents: read
       pages: write
@@ -202,11 +204,10 @@ jobs:
 
     - name: Setup Pages
       uses: actions/configure-pages@v3
-
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v2
       with:
-        path: './site'
+        path: ./site
 
     - name: Deploy to GitHub Pages
       id: deployment
