--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -50,7 +50,7 @@ jobs:
     - name: Lint with ruff
       run: |
         # Check for syntax errors and undefined names
-        ruff check . --select=E9,F63,F7,F82 --show-source
+        ruff check . --select=E9,F63,F7,F82 --show-files
         # Check all other linting rules
         ruff check .
 
