--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "A comprehensive pond planning application for calculating pond di
 readme = "README.md"
 license = {text = "MIT"}
 authors = [
-    {name = "Antony Bailey", email = "support@antonybailey.net"}
+    {name = "Antony Bailey", email = "antony@example.com"}
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
@@ -75,6 +75,8 @@ extend-exclude = '''
 [tool.ruff]
 target-version = "py39"
 line-length = 88
+
+[tool.ruff.lint]
 select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
@@ -92,7 +94,7 @@ ignore = [
     "B904",  # raise-without-from-inside-except
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "tests/**/*.py" = [
     "S101",  # asserts allowed in tests
     "ARG",   # unused function args allowed in tests
@@ -135,7 +137,6 @@ markers = [
 ]
 
 [tool.bandit]
-# Exclude test files from assert_used check (B101)
 exclude_dirs = ["tests"]
 skips = ["B101"]
 
