--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -183,6 +183,7 @@ jobs:
       contents: read
       pages: write
       id-token: write
+      security-events: write
 
     steps:
       - name: Checkout code
