--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -109,6 +109,11 @@ jobs:
       packages: write
       attestations: write
       id-token: write
+      security-events: write
+      pull-requests: write
+      deployments: write
+      issues: write
+      discussions: write
 
     steps:
       - name: Checkout code
