--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -196,6 +196,10 @@ jobs:
       issues: write
       discussions: write
 
+    environment:
+      name: github-pages
+      url: https://parttimelegend.github.io/pond-planner
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
